--- a/client/public/index.html
+++ b/client/public/index.html
@@ -4,12 +4,16 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="Starter Snowpack App" />
-    
-    <<link rel="stylesheet" href="index.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Noto+Serif&family=Share+Tech+Mono&family=Spectral:wght@300&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="index.css" />
     <title>Quick Notes</title>
   </head>
   <body>
-    <h1>Welcome to Quick Notes!</h1>
     <noscript>You need to enable JavaScript to run this app.</noscript>
 
     <div id="root"></div>
